tests/golden/6-numeric-literals-and-notations/invalid/common/bad-integer-literal-3.yini
^ BadInteger
badInt = +00     # NOT a valid integer literal
